dump last data revision from main repository

--- a/authors_mapping.json
+++ b/authors_mapping.json
@@ -405,6 +405,7 @@
   "E. Swoboda.": "Erich Swoboda",
   "E. Vetter.": "Emil Vetter",
   "E. Weiss.": "Egon Weiss",
+  "E. Weiß.": "Egon Weiss",
   "E. Wellmann.": "Eduard Wellmann",
   "E. Ziebarth.": "Erich Ziebarth",
   "E. v. Borries.": "Emil von Borries",
