Updating the register at 220718_080516

--- a/authors_mapping.json
+++ b/authors_mapping.json
@@ -983,6 +983,7 @@
   "Jürgen Deininger.": "Jürgen Deininger",
   "Jüthner": "Julius Jüthner",
   "Jüthner.": "Julius Jüthner",
+  "K. Deichgräber.": "Karl Deichgräber",
   "K. J. Neumann.": "Karl Johannes Neumann",
   "K. K. Müller.": "Karl Konrad Müller",
   "K. Kretschmer.": "Konrad Kretschmer",
