Updating the register at 220730_080523

--- a/authors_mapping.json
+++ b/authors_mapping.json
@@ -1004,6 +1004,7 @@
   "Kahrstedt.": "Ulrich Kahrstedt",
   "Kaibel": "Georg Kaibel",
   "Kaibel.": "Georg Kaibel",
+  "Kampffmeyer.": "Georg Kampffmeyer",
   "Kapp": "Ernst Kapp",
   "Kappelmacher": "Alfred Kappelmacher",
   "Kappelmacher.": "Alfred Kappelmacher",
@@ -1355,6 +1356,9 @@
   },
   "Nagl.": {
     "*": "Maria Assunta Nagl",
+    "I A,1": "Alfred Nagl",
+    "II A,1": "Alfred Nagl",
+    "III A,1": "Alfred Nagl",
     "S IV": "Alfred Nagl"
   },
   "Nap": "Jacobus Matthijs Nap",
