Updating the register at 220816_080522

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -36,6 +36,7 @@
   "Adolf Berger.": "Adolf Berger",
   "Adolf Grohmann.": "Adolf Grohmann",
   "Adolf Lippold.": "Adolf Lippold",
+  "Adrien Bruhl.": "Adrien Bruhl",
   "Akinian": "Pater Nerses W. Akinian",
   "Albert Dietrich.": "Albert Dietrich",
   "Albert Herrmann.": "Albert Herrmann",
@@ -469,6 +470,7 @@
   "F. H. Weissbach.": "Franz Heinrich Weißbach",
   "F. Jacoby.": "Felix Jacoby",
   "F. K. Dörner.": "Friedrich Karl Dörner",
+  "F. Lammert.": "Friedrich Lammert",
   "F. M. Heichelheim.": "Fritz Moritz Heichelheim",
   "F. Marx.": "Friedrich Marx| (Philologe)",
   "F. Miltner.": "Franz Miltner",
@@ -758,6 +760,7 @@
   "Hans Oppermann.": "Hans Oppermann",
   "Hans Philipp.": "Hans Philipp| (Geograph)",
   "Hans Schaefer.": "Hans Schaefer",
+  "Hans Schwabl.": "Hans Schwabl",
   "Hans Treidler.": "Hans Treidler",
   "Hans Volkmann.": "Hans Volkmann",
   "Hans Walter.": "Hans Walter",
@@ -913,6 +916,7 @@
   "Impallomeni": "Giambattista Impallomeni",
   "Ingemar Düring.": "Ingemar Düring",
   "Instinsky": "Hans Ulrich Instinsky",
+  "J. Duchesne-Guillemin.": "Jacques Duchesne-Guillemin",
   "J. E. Fontenrose.": "Joseph Eddy Fontenrose",
   "J. Friedrich.": "Johannes Friedrich",
   "J. Geffcken.": "Johannes Geffcken| (Philologe)",
@@ -981,6 +985,7 @@
   "Jülicher": "Adolf Jülicher",
   "Jülicher.": "Adolf Jülicher",
   "Jürgen Deininger.": "Jürgen Deininger",
+  "Jürgen Untermann.": "Jürgen Untermann",
   "Jüthner": "Julius Jüthner",
   "Jüthner.": "Julius Jüthner",
   "K. Deichgräber.": "Karl Deichgräber",
@@ -1264,6 +1269,7 @@
   "Mau.": "August Mau",
   "Maull": "Otto Maull",
   "Maur. Schuster.": "Mauriz Schuster",
+  "Mauriz Schuster.": "Mauriz Schuster",
   "Maux": "Richard Maux",
   "Maux.": "Richard Maux",
   "Max C. P. Schmidt.": "Max C. P. Schmidt",
@@ -1288,6 +1294,7 @@
   "Meuli": "Karl Meuli",
   "Meuli.": "Karl Meuli",
   "Mewaldt": "Johannes Mewaldt",
+  "Mewaldt.": "Johannes Mewaldt",
   "Meyer, Eduard": "Eduard Meyer",
   "Meyer, Ernst": "Ernst Meyer",
   "Meyer, Herbert": "Herbert Meyer",
@@ -1336,6 +1343,7 @@
   ],
   "Münzer.": "Friedrich Münzer",
   "Müri": "Walter Müri",
+  "N. Häpke †.": "Natalie Häpke",
   "Nach Dittenberger Bischoff.": [
     "Wilhelm Dittenberger",
     "Ernst Bischoff"
