Updating the register at 220817_080541

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -889,6 +889,7 @@
   "Horst Steckel.": "Horst Steckel",
   "Hosius": "Carl Hosius",
   "Hosius.": "Carl Hosius",
+  "Howard Comfort.": "Howard Comfort",
   "Hug": "August Hug",
   "Hug.": "August Hug",
   "Hula.": "Eduard Hula",
