Updating the register at 220819_080522

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -936,6 +936,7 @@
   "J. Sturm.": "Josef Sturm",
   "J. Tambornino.": "Julius Tambornino",
   "J. Tkac.": "Jaroslav Tkáč",
+  "J. Weiss.": "Jakob Weiss",
   "J. Wiesner.": "Joseph Wiesner",
   "J. Zwicker.": "Johannes Zwicker",
   "Jachmann": "Günther Jachmann",
