Updating the register at 220904_080603

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -451,6 +451,7 @@
   "Ernst Marbach.": "Ernst Marbach",
   "Ernst Marbach. †": "Ernst Marbach",
   "Ernst Meyer.": "Ernst Meyer| (Historiker)",
+  "Ernst Moser.": "Ernst Moser",
   "Ernst Stein.": "Ernst Stein",
   "Ernst Wüst.": "Ernst Wüst",
   "Escher": "Jakob Escher-Bürkli",
@@ -567,6 +568,7 @@
   "Friedrich Wotke.": "Friedrich Wotke",
   "Fritz": "Kurt von Fritz",
   "Fritz Geyer.": "Fritz Geyer| (Historiker)",
+  "Fritz Gschnitzer.": "Fritz Gschnitzer",
   "Fritz Göbel.": "Fritz Göbel",
   "Fritz Heichelheim.": "Fritz Moritz Heichelheim",
   "Fritz Schachermeyr.": "Fritz Schachermeyr",
@@ -722,6 +724,7 @@
   "H. Chochole.": "Herbert Chochole",
   "H. Diller.": "Hans Diller",
   "H. Drexler.": "Hans Drexler",
+  "H. E. Bauer.": "H. E. Bauer",
   "H. E. Stier.": "Hans Erich Stier",
   "H. G. Opitz.": "Hans-Georg Opitz",
   "H. G. Wackernagel.": "Hans Georg Wackernagel",
@@ -740,6 +743,7 @@
   "H.-G. Opitz.": "Hans-Georg Opitz",
   "H.-J. Diesner.": "Hans-Joachim Diesner",
   "H.-O. Kröner.": "Hans-Otto Kröner",
+  "H.-P. Drögemüller.": "Hans-Peter Drögemüller",
   "Habel": "Paul Habel",
   "Habel.": "Paul Habel",
   "Habermehl": "Helmut Habermehl",
@@ -1019,6 +1023,7 @@
   "Karl Hoppe.": "Karl Hoppe",
   "Karl Keyßner.": "Karl Keyßner",
   "Karl Preisendanz.": "Karl Preisendanz",
+  "Karl Schaefer.": "Karl Schaefer",
   "Karl Scherling.": "Karl Scherling",
   "Karl Tümpel.": "Karl Tümpel",
   "Karlhans Abel.": "Karlhans Abel",
@@ -1243,6 +1248,7 @@
   "M. Schmidt.": "Magdalena Schmidt",
   "M. Wellmann.": "Max Wellmann",
   "M. Wlassak.": "Moriz Wlassak",
+  "M. v. Albrecht.": "Michael von Albrecht",
   "Maas": "Paul Maas",
   "Maas.": "Paul Maas",
   "MacDonald": "George MacDonald",
@@ -1392,6 +1398,7 @@
   "Niese.": "Benedikt Niese",
   "Nilsson": "Martin Persson Nilsson",
   "Nock": "Arthur Darby Nock",
+  "Norbert Heger.": "Norbert Heeger",
   "Nöldeke.": "Theodor Nöldeke",
   "Nörr": "Dieter Nörr",
   "O. Keller.": "Otto Keller| (Philologe)",
@@ -1578,6 +1585,7 @@
   "Reidinger": "Walter Reidinger",
   "Reincke": "Gerhard Reincke",
   "Reincke.": "Gerhard Reincke",
+  "Reinhard Büll.": "Reinhard Büll",
   "Reinhard Lullies.": "Reinhard Lullies",
   "Reinhardt": "Karl Reinhardt",
   "Reinmuth": "Oscar William Reinmuth",
@@ -1940,6 +1948,7 @@
   "W. Hoffmann.": "Wilhelm Hoffmann",
   "W. Kroll.": "Wilhelm Kroll",
   "W. Kubitschek †.": "Wilhelm Kubitschek",
+  "W. Morel.": "Willy Morel",
   "W. Peek.": "Werner Peek",
   "W. Riemschneider.": "Wilhelm Riemschneider",
   "W. Ruge.": "Walther Ruge",
@@ -1968,6 +1977,7 @@
   "Walser": "Gerold Walser",
   "Walter": "Otto Walter",
   "Walter H. Gross.": "Walter Hatto Gross",
+  "Walter Hellebrand.": "Walter Hellebrand",
   "Walter Otto.": "Walter Otto",
   "Walter Reidinger.": "Walter Reidinger",
   "Walter Schmitthenner.": "Walter Schmitthenner",
