Updating the register at 220907_080506

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -530,6 +530,7 @@
   "Foerster.": "Richard Foerster",
   "Fontenrose": "Joseph Eddy Fontenrose",
   "Forbes": "Clarence Allen Forbes",
+  "Fr. Brommer.": "Frank Brommer",
   "Fr. Kudlien.": "Fridolf Kudlien",
   "Fr. Miltner.": "Franz Miltner",
   "Fr. Rietzsch.": "Franz Rietzsch",
@@ -763,6 +764,7 @@
   "Hans Nachod.": "Hans Nachod",
   "Hans Oppermann.": "Hans Oppermann",
   "Hans Philipp.": "Hans Philipp| (Geograph)",
+  "Hans Riemann.": "Hans Riemann",
   "Hans Schaefer.": "Hans Schaefer",
   "Hans Schwabl.": "Hans Schwabl",
   "Hans Treidler.": "Hans Treidler",
@@ -844,6 +846,7 @@
   "Herm. Schmitz.": "Hermann Schmitz",
   "Herma Stiglitz.": "Herma Stiglitz",
   "Hermann Kees.": "Hermann Kees",
+  "Hermann Vetters.": "Hermann Vetters",
   "Herrmann": {
     "*": "Albert Herrmann",
     "S XIV": "Hans-Volkmar Herrmann"
@@ -1023,7 +1026,7 @@
   "Karl Hoppe.": "Karl Hoppe",
   "Karl Keyßner.": "Karl Keyßner",
   "Karl Preisendanz.": "Karl Preisendanz",
-  "Karl Schaefer.": "Karl Schaefer",
+  "Karl Schaefer.": "Karl Schäfer",
   "Karl Scherling.": "Karl Scherling",
   "Karl Tümpel.": "Karl Tümpel",
   "Karlhans Abel.": "Karlhans Abel",
@@ -1869,6 +1872,7 @@
   "Thielscher": "Paul Thielscher",
   "Thierfelder": "Andreas Thierfelder",
   "Thomas": "Garth Thomas",
+  "Thomas Gelzer.": "Thomas Gelzer",
   "Thomas Lenschau.": "Thomas Lenschau",
   "Thomasson": "Bengt E. Thomasson",
   "Thomsen": "Rudi Thomsen",
@@ -2047,6 +2051,7 @@
   "Wilcken.": "Ulrich Wilcken",
   "Wilh. Enßlin.": "Wilhelm Enßlin",
   "Wilh. Kubitschek.": "Wilhelm Kubitschek",
+  "Wilhelm Alzinger.": "Wilhelm Alzinger",
   "Wilhelm Becher.": "Wilhelm Becher",
   "Wilhelm Enßlin.": "Wilhelm Enßlin",
   "Wilhelm Kroll.": "Wilhelm Kroll",
