Updating the register at 220908_080508

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -532,6 +532,7 @@
   "Forbes": "Clarence Allen Forbes",
   "Fr. Brommer.": "Frank Brommer",
   "Fr. Kudlien.": "Fridolf Kudlien",
+  "Fr. Lammert.": "Friedrich Lammert",
   "Fr. Miltner.": "Franz Miltner",
   "Fr. Rietzsch.": "Franz Rietzsch",
   "Fraenkel, Eduard": "Eduard Fraenkel",
@@ -721,6 +722,7 @@
   "Göschka.": "Stephanie Göschka",
   "Güngerich": "Rudolf Güngerich",
   "H. Berve.": "Helmut Berve",
+  "H. Besig.": "Hans Besig",
   "H. Chantraine.": "Heinrich Chantraine",
   "H. Chochole.": "Herbert Chochole",
   "H. Diller.": "Hans Diller",
