Updating the register at 220910_080510

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1832,6 +1832,7 @@
   "Stiglitz": "Stiglitz",
   "Stoessl": "Franz Stoessl",
   "Storck": "Karl Christian Storck",
+  "Storck.": "Karl Christian Storck",
   "Strack": "Paul L. Strack",
   "Strasburger": "Hermann Strasburger",
   "Streck": "Maximilian Streck",
