--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -817,6 +817,7 @@
   "Heinr. Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Dörrie.": "Heinrich Dörrie",
+  "Heinz B. Wiggers.": "Heinz Bernhard Wiggers",
   "Helck": "Wolfgang Helck",
   "Hellebrand": "Walter Hellebrand",
   "Hellfr. Dahlmann.": "Hellfried Dahlmann",
@@ -936,6 +937,7 @@
   "J. Miller.": "Julius Miller",
   "J. Oehler.": "Johann Oehler",
   "J. Papastavrou.": "Johannes Papastavrou",
+  "J. Šašel.": "Jaroslav Šašel",
   "J. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "XV,2": "Johannes Schmidt (Philologe)",
@@ -1350,6 +1352,10 @@
   "Münscher.": "Karl Münscher",
   "Münzel.": "Robert Münzel",
   "Münzer": "Friedrich Münzer",
+  "F. Münzer – H. Gundel.": [
+    "Friedrich Münzer",
+    "Hans Georg Gundel"
+  ],
   "Münzer und Vonder Mühll.": [
     "Friedrich Münzer",
     "Friedrich von der Mühll"
@@ -1403,7 +1409,7 @@
   "Niese.": "Benedikt Niese",
   "Nilsson": "Martin Persson Nilsson",
   "Nock": "Arthur Darby Nock",
-  "Norbert Heger.": "Norbert Heeger",
+  "Norbert Heger.": "Norbert Heger",
   "Nöldeke.": "Theodor Nöldeke",
   "Nörr": "Dieter Nörr",
   "O. Keller.": "Otto Keller| (Philologe)",
@@ -1591,6 +1597,10 @@
   "Reincke": "Gerhard Reincke",
   "Reincke.": "Gerhard Reincke",
   "Reinhard Büll.": "Reinhard Büll",
+  "Reinhard Büll. Ernst Moser.": [
+    "Reinhard Büll",
+    "Ernst Moser"
+  ],
   "Reinhard Lullies.": "Reinhard Lullies",
   "Reinhardt": "Karl Reinhardt",
   "Reinmuth": "Oscar William Reinmuth",
@@ -2060,6 +2070,7 @@
   "Wilhelm Kroll.": "Wilhelm Kroll",
   "Wilhelm Riemschneider.": "Wilhelm Riemschneider",
   "Wilhelm.": "Adolf Wilhelm",
+  "Will Richter.": "Will Richter",
   "Willi Göber.": "Willi Göber",
   "Williger.": "Eduard Williger",
   "Willrich": "Hugo Willrich",
