--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -51,6 +51,7 @@
   "Alfred Franke.": "Alfred Franke",
   "Alfred Körte.": "Alfred Körte",
   "Alfred Neumann.": "Alfred Richard Neumann",
+  "Alfred R. Neumann.": "Alfred Richard Neumann",
   "Alfred Schmidt.": "Alfred Schmidt",
   "Alföldy": "Géza Alföldy",
   "Alpers": "Klaus Alpers",
@@ -963,6 +964,7 @@
   "Jenö Fitz.": "Jenő Fitz",
   "Jenő Fitz.": "Jenő Fitz",
   "Jeremias": "Joachim Jeremias",
+  "Jerzy Łanowski.": "Jerzy Łanowski",
   "Jessen": "Otto Jessen",
   "Jessen.": "Otto Jessen",
   "Jirku": "Anton Jirku",
