--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -46,6 +46,7 @@
   "Alexander": "Alexander Demandt",
   "Alexander Demandt.": "Alexander Demandt",
   "Alf. Nagl.": "Alfred Nagl",
+  "Alfons Weische.": "Alfons Weische",
   "Alfr. Nagl.": "Alfred Nagl",
   "Alfred Franke †.": "Alfred Franke",
   "Alfred Franke.": "Alfred Franke",
