--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -11,6 +11,7 @@
     "Hans-Georg Opitz"
   ],
   "A. Körte.": "Alfred Körte",
+  "A. L. F. Rivet.": "Albert Lionel Frederick Rivet",
   "A. Lippold.": "Adolf Lippold",
   "A. Marx.": "August Marx",
   "A. Nagl.": "Alfred Nagl",
@@ -852,6 +853,7 @@
   "Herma Stiglitz.": "Herma Stiglitz",
   "Hermann Kees.": "Hermann Kees",
   "Hermann Vetters.": "Hermann Vetters",
+  "Hermann von Wißmann.": "Hermann von Wißmann",
   "Herrmann": {
     "*": "Albert Herrmann",
     "S XIV": "Hans-Volkmar Herrmann"
