--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -853,6 +853,7 @@
   "Herma Stiglitz.": "Herma Stiglitz",
   "Hermann Kees.": "Hermann Kees",
   "Hermann Vetters.": "Hermann Vetters",
+  "Hermann v. Wißmann.": "Hermann von Wißmann",
   "Hermann von Wißmann.": "Hermann von Wißmann",
   "Herrmann": {
     "*": "Albert Herrmann",
@@ -1885,6 +1886,7 @@
   "Th. Lenschau.": "Thomas Lenschau",
   "Thalheim": "Theodor Franz Arthur Thalheim",
   "Thalheim.": "Theodor Thalheim",
+  "Theo Mayer-Maly.": "Theodor Mayer-Maly",
   "Thiele": "Georg Thiele",
   "Thiele.": "Georg Thiele",
   "Thielscher": "Paul Thielscher",
