--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -287,6 +287,7 @@
   "Chantraine": "Heinrich Chantraine",
   "Chochole": "Herbert Chochole",
   "Chr. M. Danoff.": "Christo Miloschev Danoff",
+  "Christo M. Danoff.": "Christo Miloschev Danoff",
   "Christian": "Viktor Christian",
   "Christian Meier.": "Christian Meier",
   "Christoph Brecht.": "Christoph Heinrich Brecht",
@@ -1948,6 +1949,7 @@
   "Voigt.": "Felix A. Voigt",
   "Volkmann": "Hans Volkmann",
   "Volkmann.": "Hans Volkmann",
+  "Benedikt Vollmann.": "Benedikt Konrad Vollmann",
   "Vollmer": "Friedrich Vollmer",
   "Vollmer.": "Friedrich Vollmer",
   "Von der Mühll": {
