--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -648,6 +648,7 @@
   "Gertrud Herzog.": "Gertrud Herzog-Hauser",
   "Geyer": "Fritz Geyer",
   "Geyer.": "Fritz Geyer| (Historiker)",
+  "Géza Alföldy.": "Géza Alföldy",
   "Gigante": "Marcello Gigante",
   "Ginzel": "Friedrich Karl Ginzel",
   "Ginzel.": "Friedrich Karl Ginzel",
@@ -767,6 +768,7 @@
   "Hans Gundel.": "Hans Georg Gundel",
   "Hans Gärtner.": "Hans Gärtner",
   "Hans Herter.": "Hans Herter",
+  "Hans Kloft.": "Hans Kloft",
   "Hans Nachod.": "Hans Nachod",
   "Hans Oppermann.": "Hans Oppermann",
   "Hans Philipp.": "Hans Philipp| (Geograph)",
