--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -933,6 +933,7 @@
   "Ilse Zechner.": "Ilse Zechner",
   "Imhoof-Blumer.": "Friedrich Imhoof-Blumer",
   "Impallomeni": "Giambattista Impallomeni",
+  "Ingeborg Scheibler.": "Ingeborg Scheibler",
   "Ingemar Düring.": "Ingemar Düring",
   "Instinsky": "Hans Ulrich Instinsky",
   "J. Duchesne-Guillemin.": "Jacques Duchesne-Guillemin",
