--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -81,6 +81,7 @@
   "Assmann.": "Ernst Assmann",
   "Assunta Nagl.": "Maria Assunta Nagl",
   "Atenstädt.": "Felix Atenstädt",
+  "Aug. Hug.": "August Hug",
   "Aulitzky.": "Karl Aulitzky",
   "Aust": "Emil Aust",
   "Aust.": "Emil Aust",
@@ -289,6 +290,7 @@
   "Chr. M. Danoff.": "Christo Miloschev Danoff",
   "Christo M. Danoff.": "Christo Miloschev Danoff",
   "Christian": "Viktor Christian",
+  "Christian Habicht.": "Christian Habicht",
   "Christian Meier.": "Christian Meier",
   "Christoph Brecht.": "Christoph Heinrich Brecht",
   "Cichorius.": "Conrad Cichorius",
@@ -633,6 +635,7 @@
   "Gerhard Radke.": "Gerhard Radke",
   "Gerhard Wesenberg.": "Gerhard Wesenberg",
   "Gerhard Winkler.": "Gerhard Winkler",
+  "Gerhard Wirth.": "Gerhard Wirth",
   "Gerhard.": "Gustav Adolf Gerhard",
   "Gerner": "Erich Gerner",
   "Gernot Piccotini.": "Gernot Piccottini",
@@ -656,6 +659,7 @@
   "Glaser": "Konrad Glaser",
   "Glöckner.": "Stephan Glöckner",
   "Goessler": "Peter Goessler",
+  "Goessler.": "Peter Goessler",
   "Goethert": "Friedrich Wilhelm Goethert",
   "Goetz": "Georg Goetz",
   "Goetz.": "Georg Goetz",
@@ -773,6 +777,7 @@
   "Hans Oppermann.": "Hans Oppermann",
   "Hans Philipp.": "Hans Philipp| (Geograph)",
   "Hans Riemann.": "Hans Riemann",
+  "Hans Schäfer.": "Hans Schaefer",
   "Hans Schaefer.": "Hans Schaefer",
   "Hans Schwabl.": "Hans Schwabl",
   "Hans Treidler.": "Hans Treidler",
@@ -976,6 +981,7 @@
   "Jessen": "Otto Jessen",
   "Jessen.": "Otto Jessen",
   "Jirku": "Anton Jirku",
+  "J. Bleicken.": "Jochen Bleicken",
   "Joh. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "III A,1": "Johannes Schmidt (Philologe)",
@@ -1273,6 +1279,7 @@
   "Mackauer": "Wilhelm Mackauer",
   "Malten": "Ludolf Malten",
   "Malten.": "Ludolf Malten",
+  "Manfred Fuhrmann.": "Manfred Fuhrmann",
   "Manigk": "Alfred Manigk",
   "Manigk.": "Alfred Manigk",
   "Mansel": "Arif Müfid Mansel",
@@ -1484,6 +1491,7 @@
   "Paschoud": "François Paschoud",
   "Patsch": "Carl Patsch",
   "Patsch.": "Carl Patsch",
+  "Paul Händel.": "Paul Händel",
   "Paul Maas.": "Paul Maas",
   "Paul Moraux.": "Paul Moraux",
   "Paul Schoch.": "Paul Schoch-Bodmer",
@@ -1495,6 +1503,7 @@
   "Perry": "Ben Edwin Perry",
   "Peter Lebrecht Schmidt.": "Peter Lebrecht Schmidt",
   "Peter Meinhold.": "Peter Meinhold",
+  "Peter Nober.": "Peter Nober",
   "Petrikovits": "Harald von Petrikovits",
   "Pfaff": "Ivo Pfaff",
   "Pfaff.": "Ivo Pfaff",
