Updating the register at 220913_040515

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -118,6 +118,7 @@
     "Kurt Fitzler",
     "Otto Seeck"
   ],
+  "Benedikt Vollmann.": "Benedikt Konrad Vollmann",
   "Benedum": "Jost Benedum",
   "Bengt E. Thomasson.": "Bengt E. Thomasson",
   "Bengtson": "Hermann Bengtson",
@@ -288,10 +289,10 @@
   "Chantraine": "Heinrich Chantraine",
   "Chochole": "Herbert Chochole",
   "Chr. M. Danoff.": "Christo Miloschev Danoff",
-  "Christo M. Danoff.": "Christo Miloschev Danoff",
   "Christian": "Viktor Christian",
   "Christian Habicht.": "Christian Habicht",
   "Christian Meier.": "Christian Meier",
+  "Christo M. Danoff.": "Christo Miloschev Danoff",
   "Christoph Brecht.": "Christoph Heinrich Brecht",
   "Cichorius.": "Conrad Cichorius",
   "Clemen": "Carl Clemen",
@@ -481,6 +482,10 @@
   "F. M. Heichelheim.": "Fritz Moritz Heichelheim",
   "F. Marx.": "Friedrich Marx| (Philologe)",
   "F. Miltner.": "Franz Miltner",
+  "F. Münzer – H. Gundel.": [
+    "Friedrich Münzer",
+    "Hans Georg Gundel"
+  ],
   "F. Münzer.": "Friedrich Münzer",
   "F. Poland.": "Franz Poland",
   "F. Schober.": "Friedrich Schober",
@@ -651,7 +656,6 @@
   "Gertrud Herzog.": "Gertrud Herzog-Hauser",
   "Geyer": "Fritz Geyer",
   "Geyer.": "Fritz Geyer| (Historiker)",
-  "Géza Alföldy.": "Géza Alföldy",
   "Gigante": "Marcello Gigante",
   "Ginzel": "Friedrich Karl Ginzel",
   "Ginzel.": "Friedrich Karl Ginzel",
@@ -724,6 +728,7 @@
     "Albert Wünsch"
   ],
   "Gärtner.": "Hans Gärtner",
+  "Géza Alföldy.": "Géza Alföldy",
   "Göbel": "Fritz Göbel",
   "Göbel.": "Fritz Göbel",
   "Göber": "Willi Göber",
@@ -777,9 +782,9 @@
   "Hans Oppermann.": "Hans Oppermann",
   "Hans Philipp.": "Hans Philipp| (Geograph)",
   "Hans Riemann.": "Hans Riemann",
-  "Hans Schäfer.": "Hans Schaefer",
   "Hans Schaefer.": "Hans Schaefer",
   "Hans Schwabl.": "Hans Schwabl",
+  "Hans Schäfer.": "Hans Schaefer",
   "Hans Treidler.": "Hans Treidler",
   "Hans Volkmann.": "Hans Volkmann",
   "Hans Walter.": "Hans Walter",
@@ -828,7 +833,7 @@
   "Heinr. Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Dörrie.": "Heinrich Dörrie",
-  "Heinz B. Wiggers.": "Heinz Bernhard Wiggers",
+  "Heinz B. Wiggers.": "Heinz B. Wiggers",
   "Helck": "Wolfgang Helck",
   "Hellebrand": "Walter Hellebrand",
   "Hellfr. Dahlmann.": "Hellfried Dahlmann",
@@ -941,6 +946,7 @@
   "Ingeborg Scheibler.": "Ingeborg Scheibler",
   "Ingemar Düring.": "Ingemar Düring",
   "Instinsky": "Hans Ulrich Instinsky",
+  "J. Bleicken.": "Jochen Bleicken",
   "J. Duchesne-Guillemin.": "Jacques Duchesne-Guillemin",
   "J. E. Fontenrose.": "Joseph Eddy Fontenrose",
   "J. Friedrich.": "Johannes Friedrich",
@@ -951,7 +957,6 @@
   "J. Miller.": "Julius Miller",
   "J. Oehler.": "Johann Oehler",
   "J. Papastavrou.": "Johannes Papastavrou",
-  "J. Šašel.": "Jaroslav Šašel",
   "J. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "XV,2": "Johannes Schmidt (Philologe)",
@@ -964,6 +969,7 @@
   "J. Weiss.": "Jakob Weiss",
   "J. Wiesner.": "Joseph Wiesner",
   "J. Zwicker.": "Johannes Zwicker",
+  "J. Šašel.": "Jaroslav Šašel",
   "Jachmann": "Günther Jachmann",
   "Jacoby, A[dolf]": "Adolf Jacoby",
   "Jacoby, [Felix]": "Felix Jacoby",
@@ -981,7 +987,6 @@
   "Jessen": "Otto Jessen",
   "Jessen.": "Otto Jessen",
   "Jirku": "Anton Jirku",
-  "J. Bleicken.": "Jochen Bleicken",
   "Joh. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "III A,1": "Johannes Schmidt (Philologe)",
@@ -1369,10 +1374,6 @@
   "Münscher.": "Karl Münscher",
   "Münzel.": "Robert Münzel",
   "Münzer": "Friedrich Münzer",
-  "F. Münzer – H. Gundel.": [
-    "Friedrich Münzer",
-    "Hans Georg Gundel"
-  ],
   "Münzer und Vonder Mühll.": [
     "Friedrich Münzer",
     "Friedrich von der Mühll"
@@ -1426,7 +1427,7 @@
   "Niese.": "Benedikt Niese",
   "Nilsson": "Martin Persson Nilsson",
   "Nock": "Arthur Darby Nock",
-  "Norbert Heger.": "Norbert Heger",
+  "Norbert Heger.": "Norbert Heeger",
   "Nöldeke.": "Theodor Nöldeke",
   "Nörr": "Dieter Nörr",
   "O. Keller.": "Otto Keller| (Philologe)",
@@ -1616,10 +1617,7 @@
   "Reincke": "Gerhard Reincke",
   "Reincke.": "Gerhard Reincke",
   "Reinhard Büll.": "Reinhard Büll",
-  "Reinhard Büll. Ernst Moser.": [
-    "Reinhard Büll",
-    "Ernst Moser"
-  ],
+  "Reinhard Büll. Ernst Moser.": "Reinhard Büll",
   "Reinhard Lullies.": "Reinhard Lullies",
   "Reinhardt": "Karl Reinhardt",
   "Reinmuth": "Oscar William Reinmuth",
@@ -1961,7 +1959,6 @@
   "Voigt.": "Felix A. Voigt",
   "Volkmann": "Hans Volkmann",
   "Volkmann.": "Hans Volkmann",
-  "Benedikt Vollmann.": "Benedikt Konrad Vollmann",
   "Vollmer": "Friedrich Vollmer",
   "Vollmer.": "Friedrich Vollmer",
   "Von der Mühll": {
