--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -20,6 +20,7 @@
   "A. Schramm.": "Albert Schramm",
   "A. Schulten.": "Adolf Schulten",
   "A. Stein.": "Arthur Stein",
+  "A. W. van Buren.": "Albert William Van Buren",
   "A. W. Van Buren.": "Albert William Van Buren",
   "A. v. Blumenthal.": "Albrecht von Blumenthal",
   "A. v. Premerstein.": "Anton von Premerstein",
@@ -378,6 +379,7 @@
   "Dörrie": "Heinrich Dörrie",
   "Dörries": "Hermann Dörries",
   "Düll": "Rudolf Düll",
+  "Düll.": "Rudolf Düll",
   "Dümmler.": "Ferdinand Dümmler",
   "E. Assmann.": "Ernst Assmann",
   "E. Bernert.": "Ernst Bernert",
@@ -717,6 +719,7 @@
     "XV,1": "Jan Gunning"
   },
   "Gunter Wesener.": "Gunter Wesener",
+  "Gustav Hölscher.": "Gustav Hölscher",
   "Gutenbrunner": "Siegfried Gutenbrunner",
   "Gärtner": "Hans Gärtner",
   "Gärtner & Wünsch.": [
@@ -828,6 +831,7 @@
   "Heinr. Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Dörrie.": "Heinrich Dörrie",
+  "Heinrich Sulze.": "Heinrich Sulze",
   "Heinz B. Wiggers.": "Heinz Bernhard Wiggers",
   "Helck": "Wolfgang Helck",
   "Hellebrand": "Walter Hellebrand",
