--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -777,6 +777,7 @@
   "Hans Herter.": "Hans Herter",
   "Hans Kloft.": "Hans Kloft",
   "Hans Nachod.": "Hans Nachod",
+  "Hans-Norbert Roisl.": "Hans Norbert Roisl",
   "Hans Oppermann.": "Hans Oppermann",
   "Hans Philipp.": "Hans Philipp| (Geograph)",
   "Hans Riemann.": "Hans Riemann",
