--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -924,6 +924,7 @@
   "Hultsch": "Friedrich Hultsch",
   "Hultsch.": "Friedrich Hultsch",
   "Humborg": "Franz Humborg",
+  "Humborg.": "Franz Humborg",
   "Hyde": "Walter Woodburn Hyde",
   "Häbler.": "Albin Haebler",
   "Hähnle": "Karl Hähnle",
