--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1470,6 +1470,7 @@
   "Ostern.": "Hermann Ostern",
   "Ostrogorsky": "Georg Ostrogorsky",
   "Otto Hoffmann.": "Otto Hoffmann",
+  "Otto Luschnat.": "Otto Luschnat",
   "Otto Schultheß.": "Otto Schulthess",
   "Otto Walter.": "Otto Walter",
   "Otto Waser.": "Otto Waser",
