--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -20,8 +20,8 @@
   "A. Schramm.": "Albert Schramm",
   "A. Schulten.": "Adolf Schulten",
   "A. Stein.": "Arthur Stein",
-  "A. W. van Buren.": "Albert William Van Buren",
   "A. W. Van Buren.": "Albert William Van Buren",
+  "A. W. van Buren.": "Albert William Van Buren",
   "A. v. Blumenthal.": "Albrecht von Blumenthal",
   "A. v. Premerstein.": "Anton von Premerstein",
   "Abbott": "Kenneth Morgan Abbott",
@@ -119,6 +119,7 @@
     "Kurt Fitzler",
     "Otto Seeck"
   ],
+  "Benedikt Vollmann.": "Benedikt Konrad Vollmann",
   "Benedum": "Jost Benedum",
   "Bengt E. Thomasson.": "Bengt E. Thomasson",
   "Bengtson": "Hermann Bengtson",
@@ -289,10 +290,10 @@
   "Chantraine": "Heinrich Chantraine",
   "Chochole": "Herbert Chochole",
   "Chr. M. Danoff.": "Christo Miloschev Danoff",
-  "Christo M. Danoff.": "Christo Miloschev Danoff",
   "Christian": "Viktor Christian",
   "Christian Habicht.": "Christian Habicht",
   "Christian Meier.": "Christian Meier",
+  "Christo M. Danoff.": "Christo Miloschev Danoff",
   "Christoph Brecht.": "Christoph Heinrich Brecht",
   "Cichorius.": "Conrad Cichorius",
   "Clemen": "Carl Clemen",
@@ -355,6 +356,7 @@
   "Dittenberger": "Wilhelm Dittenberger",
   "Dittenberger.": "Wilhelm Dittenberger",
   "Dombart": "Theodor Dombart",
+  "Dombart.": "Theodor Dombart",
   "Dopp": "Ernst Dopp",
   "Dornseiff": "Franz Dornseiff",
   "Dorothea von Lunzer.": "Dorothea von Lunzer",
@@ -483,6 +485,10 @@
   "F. M. Heichelheim.": "Fritz Moritz Heichelheim",
   "F. Marx.": "Friedrich Marx| (Philologe)",
   "F. Miltner.": "Franz Miltner",
+  "F. Münzer – H. Gundel.": [
+    "Friedrich Münzer",
+    "Hans Georg Gundel"
+  ],
   "F. Münzer.": "Friedrich Münzer",
   "F. Poland.": "Franz Poland",
   "F. Schober.": "Friedrich Schober",
@@ -653,7 +659,6 @@
   "Gertrud Herzog.": "Gertrud Herzog-Hauser",
   "Geyer": "Fritz Geyer",
   "Geyer.": "Fritz Geyer| (Historiker)",
-  "Géza Alföldy.": "Géza Alföldy",
   "Gigante": "Marcello Gigante",
   "Ginzel": "Friedrich Karl Ginzel",
   "Ginzel.": "Friedrich Karl Ginzel",
@@ -727,6 +732,7 @@
     "Albert Wünsch"
   ],
   "Gärtner.": "Hans Gärtner",
+  "Géza Alföldy.": "Géza Alföldy",
   "Göbel": "Fritz Göbel",
   "Göbel.": "Fritz Göbel",
   "Göber": "Willi Göber",
@@ -777,19 +783,19 @@
   "Hans Herter.": "Hans Herter",
   "Hans Kloft.": "Hans Kloft",
   "Hans Nachod.": "Hans Nachod",
-  "Hans-Norbert Roisl.": "Hans Norbert Roisl",
   "Hans Oppermann.": "Hans Oppermann",
   "Hans Philipp.": "Hans Philipp| (Geograph)",
   "Hans Riemann.": "Hans Riemann",
-  "Hans Schäfer.": "Hans Schaefer",
   "Hans Schaefer.": "Hans Schaefer",
   "Hans Schwabl.": "Hans Schwabl",
+  "Hans Schäfer.": "Hans Schaefer",
   "Hans Treidler.": "Hans Treidler",
   "Hans Volkmann.": "Hans Volkmann",
   "Hans Walter.": "Hans Walter",
   "Hans Widmann.": "Hans Widmann",
   "Hans v. Geisau.": "Hans von Geisau",
   "Hans von Geisau.": "Hans von Geisau",
+  "Hans-Norbert Roisl.": "Hans Norbert Roisl",
   "Hans-Otto Kröner.": "Hans-Otto Kröner",
   "Hansen": "Olaf Hansen",
   "Hanslik": "Rudolf Hanslik",
@@ -833,7 +839,7 @@
   "Heinrich Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Dörrie.": "Heinrich Dörrie",
   "Heinrich Sulze.": "Heinrich Sulze",
-  "Heinz B. Wiggers.": "Heinz Bernhard Wiggers",
+  "Heinz B. Wiggers.": "Heinz B. Wiggers",
   "Helck": "Wolfgang Helck",
   "Hellebrand": "Walter Hellebrand",
   "Hellfr. Dahlmann.": "Hellfried Dahlmann",
@@ -947,6 +953,7 @@
   "Ingeborg Scheibler.": "Ingeborg Scheibler",
   "Ingemar Düring.": "Ingemar Düring",
   "Instinsky": "Hans Ulrich Instinsky",
+  "J. Bleicken.": "Jochen Bleicken",
   "J. Duchesne-Guillemin.": "Jacques Duchesne-Guillemin",
   "J. E. Fontenrose.": "Joseph Eddy Fontenrose",
   "J. Friedrich.": "Johannes Friedrich",
@@ -957,7 +964,6 @@
   "J. Miller.": "Julius Miller",
   "J. Oehler.": "Johann Oehler",
   "J. Papastavrou.": "Johannes Papastavrou",
-  "J. Šašel.": "Jaroslav Šašel",
   "J. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "XV,2": "Johannes Schmidt (Philologe)",
@@ -970,6 +976,7 @@
   "J. Weiss.": "Jakob Weiss",
   "J. Wiesner.": "Joseph Wiesner",
   "J. Zwicker.": "Johannes Zwicker",
+  "J. Šašel.": "Jaroslav Šašel",
   "Jachmann": "Günther Jachmann",
   "Jacoby, A[dolf]": "Adolf Jacoby",
   "Jacoby, [Felix]": "Felix Jacoby",
@@ -987,7 +994,6 @@
   "Jessen": "Otto Jessen",
   "Jessen.": "Otto Jessen",
   "Jirku": "Anton Jirku",
-  "J. Bleicken.": "Jochen Bleicken",
   "Joh. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "III A,1": "Johannes Schmidt (Philologe)",
@@ -1375,10 +1381,6 @@
   "Münscher.": "Karl Münscher",
   "Münzel.": "Robert Münzel",
   "Münzer": "Friedrich Münzer",
-  "F. Münzer – H. Gundel.": [
-    "Friedrich Münzer",
-    "Hans Georg Gundel"
-  ],
   "Münzer und Vonder Mühll.": [
     "Friedrich Münzer",
     "Friedrich von der Mühll"
@@ -1432,7 +1434,7 @@
   "Niese.": "Benedikt Niese",
   "Nilsson": "Martin Persson Nilsson",
   "Nock": "Arthur Darby Nock",
-  "Norbert Heger.": "Norbert Heger",
+  "Norbert Heger.": "Norbert Heeger",
   "Nöldeke.": "Theodor Nöldeke",
   "Nörr": "Dieter Nörr",
   "O. Keller.": "Otto Keller| (Philologe)",
@@ -1623,10 +1625,7 @@
   "Reincke": "Gerhard Reincke",
   "Reincke.": "Gerhard Reincke",
   "Reinhard Büll.": "Reinhard Büll",
-  "Reinhard Büll. Ernst Moser.": [
-    "Reinhard Büll",
-    "Ernst Moser"
-  ],
+  "Reinhard Büll. Ernst Moser.": "Reinhard Büll",
   "Reinhard Lullies.": "Reinhard Lullies",
   "Reinhardt": "Karl Reinhardt",
   "Reinmuth": "Oscar William Reinmuth",
@@ -1968,7 +1967,6 @@
   "Voigt.": "Felix A. Voigt",
   "Volkmann": "Hans Volkmann",
   "Volkmann.": "Hans Volkmann",
-  "Benedikt Vollmann.": "Benedikt Konrad Vollmann",
   "Vollmer": "Friedrich Vollmer",
   "Vollmer.": "Friedrich Vollmer",
   "Von der Mühll": {
