Updating the register at 220916_040509

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -839,7 +839,7 @@
   "Heinrich Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Dörrie.": "Heinrich Dörrie",
   "Heinrich Sulze.": "Heinrich Sulze",
-  "Heinz B. Wiggers.": "Heinz Bernhard Wiggers",
+  "Heinz B. Wiggers.": "Heinz B. Wiggers",
   "Helck": "Wolfgang Helck",
   "Hellebrand": "Walter Hellebrand",
   "Hellfr. Dahlmann.": "Hellfried Dahlmann",
@@ -1434,7 +1434,7 @@
   "Niese.": "Benedikt Niese",
   "Nilsson": "Martin Persson Nilsson",
   "Nock": "Arthur Darby Nock",
-  "Norbert Heger.": "Norbert Heger",
+  "Norbert Heger.": "Norbert Heeger",
   "Nöldeke.": "Theodor Nöldeke",
   "Nörr": "Dieter Nörr",
   "O. Keller.": "Otto Keller| (Philologe)",
