--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1489,6 +1489,7 @@
   "P. J. Junge.": "Peter Julius Junge",
   "P. J. Meier.": "Paul Jonas Meier",
   "P. Kübler.": "Paul Kübler",
+  "P. Maas.": "Paul Maas",
   "P. Schulten.": "Adolf Schulten",
   "P. Treves.": "Piero Treves",
   "P. Wuilleumier.": "Pierre Wuilleumier",
