Updating the register at 220921_040501

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -86,6 +86,7 @@
   "Aulitzky.": "Karl Aulitzky",
   "Aust": "Emil Aust",
   "Aust.": "Emil Aust",
+  "Autorenkürzel.": "Personenname",
   "Avi-Yonah": "Michael Avi-Yonah",
   "B. A. Müller.": "Bruno Albin Müller",
   "B. Kübler.": "Bernhard Kübler",
@@ -448,6 +449,7 @@
   "Enßlin": "Wilhelm Enßlin",
   "Enßlin.": "Wilhelm Enßlin",
   "Erdmann": "Walter Erdmann",
+  "Erdmann.": "Walter Erdmann",
   "Erich Berneker.": "Erich Berneker",
   "Erich Diehl.": "Erich Diehl",
   "Erich Fascher.": "Erich Fascher",
