--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1882,6 +1882,10 @@
   "Stähelin.": "Felix Stähelin",
   "Stählin": "Friedrich Stählin",
   "Stählin.": "Friedrich Stählin",
+  "Stählin-Bürchner.": [
+    "Friedrich Stählin",
+    "Ludwig Bürchner"
+  ],
   "Stöckle": "Albert Stöckle",
   "Stöckle.": "Albert Stöckle",
   "Sundwall": "Johannes Sundwall",
