Updating the register at 220924_040456

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1,5 +1,6 @@
 {
   "?": "?",
+  "A. Arthur Schiller.": "A. Arthur Schiller",
   "A. E. Gordon.": "Arthur Ernest Gordon",
   "A. E. R. Boak.": "Arthur Edward Romilly Boak",
   "A. Gudeman.": "Alfred Gudeman",
@@ -1264,6 +1265,7 @@
   "Lothar Müller.": "Lothar Müller",
   "Lotte Ollendorff.": "Charlotte Ollendorff",
   "Ludw. Schmidt.": "Ludwig Schmidt| (Historiker)",
+  "Ludwig Edelstein.": "Ludwig Edelstein",
   "Ludwig Ziehen.": "Ludwig Ziehen",
   "Luebeck.": "Emil Luebeck",
   "Luisa Banti.": "Luisa Banti",
@@ -1997,6 +1999,7 @@
   "W. Hoffmann.": "Wilhelm Hoffmann",
   "W. Kroll.": "Wilhelm Kroll",
   "W. Kubitschek †.": "Wilhelm Kubitschek",
+  "W. L. Westermann.": "William Linn Westermann",
   "W. Morel.": "Willy Morel",
   "W. Peek.": "Werner Peek",
   "W. Riemschneider.": "Wilhelm Riemschneider",
@@ -2100,6 +2103,7 @@
   "Wilhelm Becher.": "Wilhelm Becher",
   "Wilhelm Enßlin.": "Wilhelm Enßlin",
   "Wilhelm Kroll.": "Wilhelm Kroll",
+  "Wilhelm Kubitschek.": "Wilhelm Kubitschek",
   "Wilhelm Riemschneider.": "Wilhelm Riemschneider",
   "Wilhelm.": "Adolf Wilhelm",
   "Will Richter.": "Will Richter",
@@ -2178,6 +2182,7 @@
   "v. Hiller.": "Friedrich Hiller von Gaertringen",
   "v. Jan.": "Karl von Jan",
   "v. Kotz-Dobrž.": "Wolfgang von Kotz-Dobrž",
+  "v. Lorentz.": "Friedrich von Lorentz",
   "v. Petrikovits.": "Harald von Petrikovits",
   "v. Premerstein.": "Anton von Premerstein",
   "v. Radinger.": "Karl Radinger von Radinghofen",
