Updating the register at 220926_040450

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -397,7 +397,7 @@
   "E. Kriaras.": "Emmanuel Kriaras",
   "E. Krämer.": "Ernst Krämer",
   "E. Lammert.": "Edmund Lammert",
-  "E. Linckenheld.": "Emil Linckenheld",
+  "E. Linckenheld.": "Émile Linckenheld",
   "E. Littmann.": "Enno Littmann",
   "E. Marbach.": "Ernst Marbach",
   "E. Meyer.": "Eduard Meyer",
@@ -1600,6 +1600,7 @@
   "Quoniam": "Pierre Quoniam",
   "R. Delbrück.": "Richard Delbrück",
   "R. Hartmann.": "Richard Hartmann",
+  "R. Helm.": "Rudolf Helm",
   "R. Leonhard.": "Rudolf Leonhard| (Jurist)",
   "R. Lullies.": "Reinhard Lullies",
   "R. Oehler.": "Raimund Oehler",
@@ -1691,6 +1692,7 @@
   "Ræder": "Hans Ræder",
   "S. Brandt.": "Samuel Brandt",
   "S. Eitrem.": "Samson Eitrem",
+  "S. Lauffer.": "Siegfried Lauffer",
   "Saake": "Helmut Saake",
   "Sachers": "Erich Sachers",
   "Sakolowski.": "Paul Sakolowski",
