Updating the register at 220927_040457

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2138,6 +2138,7 @@
     "XXIII,1": "Hans Julius Wolff"
   },
   "Wolff.": "Alfred Wolff",
+  "Wolfgang Fauth.": "Wolfgang Fauth",
   "Wolfgang Helck.": "Wolfgang Helck",
   "Wolfgang Waldstein.": "Wolfgang Waldstein",
   "Wotke": "Friedrich Wotke",
