Updating the register at 220930_040456

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -6,6 +6,7 @@
   "A. Gudeman.": "Alfred Gudeman",
   "A. Herrmann.": "Albert Herrmann",
   "A. Hug.": "August Hug",
+  "A. Jacoby.": "Adolf Jacoby",
   "A. Jülicher.": "Adolf Jülicher",
   "A. Jülicher; H. G. Opitz.": [
     "Adolf Jülicher",
