Updating the register at 221002_040500

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -378,6 +378,7 @@
   "Dussaud.": "René Dussaud",
   "Duval": "Paul-Marie Duval",
   "Dziatzko.": "Karl Dziatzko",
+  "Däbritz.": "Rudolf Daebritz",
   "Dénes Gabler.": "Dénes Gabler",
   "Dörner": "Friedrich Karl Dörner",
   "Dörrie": "Heinrich Dörrie",
@@ -602,6 +603,7 @@
   "G. Gentz.": "Günter Gentz",
   "G. Herzog.": "Gertrud Herzog-Hauser",
   "G. Hölscher.": "Gustav Hölscher",
+  "G. Kazarow.": "Gawril Kazarow",
   "G. Lippold.": "Georg Lippold",
   "G. Macdonald.": "George MacDonald| (Numismatiker)",
   "G. Mau.": "Georg Mau",
