--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1498,9 +1498,10 @@
   "P. Maas.": "Paul Maas",
   "P. Schulten.": "Adolf Schulten",
   "P. Treves.": "Piero Treves",
-  "P. Wuilleumier.": "Pierre Wuilleumier",
   "P. v. Rhoden.": "Paul von Rohden",
   "P. v. Rohden.": "Paul von Rohden",
+  "P. Wuilleumier.": "Pierre Wuilleumier",
+  "P. Wessner.": "Paul Wessner",
   "Papenhoff": "Heinz Papenhoff",
   "Paraskevaidis": "Miltis Paraskevaidis",
   "Partsch.": "Joseph Partsch",
@@ -1960,6 +1961,10 @@
   "Ullmann": "Manfred Ullmann",
   "Untermann": "Jürgen Untermann",
   "V. Burr.": "Viktor Burr",
+  "v. Jan und Graf.": [
+    "Karl von Jan",
+    "Ernst Graf"
+  ],
   "V. Gebhard.": "Viktor Gebhard",
   "Vahlert": "Karola Vahlert",
   "Van der Kolf.": "Marie Christina van der Kolf",
