--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -468,6 +468,7 @@
   "Ernst Moser.": "Ernst Moser",
   "Ernst Stein.": "Ernst Stein",
   "Ernst Wüst.": "Ernst Wüst",
+  "Erwin Seidl.": "Erwin Seidl",
   "Escher": "Jakob Escher-Bürkli",
   "Escher.": "Jakob Escher-Bürkli",
   "Ettlinger": "Elisabeth Ettlinger",
