--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1875,7 +1875,7 @@
   "Stevens": "Courtenay Edward Stevens",
   "Stiegler": "Herwig Stiegler",
   "Stier": "Hans Erich Stier",
-  "Stiglitz": "Stiglitz",
+  "Stiglitz": "Roman Stiglitz",
   "Stoessl": "Franz Stoessl",
   "Storck": "Karl Christian Storck",
   "Storck.": "Karl Christian Storck",
