--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1803,6 +1803,10 @@
     "Otto Seeck",
     "Karl Praechter"
   ],
+  "Seeck und Jacoby.": [
+    "Otto Seeck",
+    "Felix Jacoby"
+  ],
   "Seeck.": "Otto Seeck",
   "Seel": "Otto Seel",
   "Seidl": "Erwin Seidl",
