--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -457,6 +457,7 @@
   "Erich Fascher.": "Erich Fascher",
   "Erich Polaschek.": "Erich Polaschek",
   "Erich Ziebarth.": "Erich Ziebarth",
+  "Ernst Bernert.": "Ernst Bernert",
   "Ernst Diehl.": "Ernst Diehl",
   "Ernst Günther Schmidt.": "Ernst Günther Schmidt",
   "Ernst Honigmann.": "Ernst Honigmann",
