--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -40,6 +40,7 @@
   "Adolf Berger.": "Adolf Berger",
   "Adolf Grohmann.": "Adolf Grohmann",
   "Adolf Lippold.": "Adolf Lippold",
+  "Adolf Schulten.": "Adolf Schulten",
   "Adrien Bruhl.": "Adrien Bruhl",
   "Akinian": "Pater Nerses W. Akinian",
   "Albert Dietrich.": "Albert Dietrich",
@@ -1504,6 +1505,7 @@
   "P. Wuilleumier.": "Pierre Wuilleumier",
   "P. v. Rhoden.": "Paul von Rohden",
   "P. v. Rohden.": "Paul von Rohden",
+  "P. Von der Mühll.": "Peter von der Mühll",
   "Papenhoff": "Heinz Papenhoff",
   "Paraskevaidis": "Miltis Paraskevaidis",
   "Partsch.": "Joseph Partsch",
