--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -408,6 +408,7 @@
   "E. Polaschek.": "Erich Polaschek",
   "E. Sachers.": "Erich Sachers",
   "E. Sattmann.": "Erhard Sattmann",
+  "E. Schuppe.": "Ernst Schuppe",
   "E. Schwartz.": "Eduard Schwartz",
   "E. Schwyzer (unter Verwertung der Materialien von W. Riemschneider).": [
     "Eduard Schwyzer",
