--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -269,6 +269,7 @@
   "Bürchner": "Ludwig Bürchner",
   "Bürchner.": "Ludwig Bürchner",
   "Büttner-Wobst.": "Theodor Büttner-Wobst",
+  "C. A. Forbes.": "Clarence Allen Forbes",
   "C. Clemen.": "Carl Clemen",
   "C. Daicoviciu.": "Constantin Daicoviciu",
   "C. Joachim Classen.": "Carl Joachim Classen",
