--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -806,6 +806,7 @@
   "Hans v. Geisau.": "Hans von Geisau",
   "Hans von Geisau.": "Hans von Geisau",
   "Hans-Norbert Roisl.": "Hans Norbert Roisl",
+  "Hans Norbert Roisl.": "Hans Norbert Roisl",
   "Hans-Otto Kröner.": "Hans-Otto Kröner",
   "Hansen": "Olaf Hansen",
   "Hanslik": "Rudolf Hanslik",
