--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -45,6 +45,7 @@
   "Akinian": "Pater Nerses W. Akinian",
   "Albert Dietrich.": "Albert Dietrich",
   "Albert Herrmann.": "Albert Herrmann",
+  "Albert Rehm.": "Albert Rehm",
   "Albin Lesky.": "Albin Lesky",
   "Albrecht": "Albrecht Dihle",
   "Albrecht Dihle.": "Albrecht Dihle",
