--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -738,11 +738,15 @@
   "Gustav Hölscher.": "Gustav Hölscher",
   "Gutenbrunner": "Siegfried Gutenbrunner",
   "Gärtner": "Hans Gärtner",
+  "Gärtner.": "Hans Gärtner",
   "Gärtner & Wünsch.": [
     "Hans Gärtner",
     "Albert Wünsch"
   ],
-  "Gärtner.": "Hans Gärtner",
+  "H.G. A.W.": [
+    "Hans Gärtner",
+    "Albert Wünsch"
+  ],
   "Géza Alföldy.": "Géza Alföldy",
   "Göbel": "Fritz Göbel",
   "Göbel.": "Fritz Göbel",
