Updating the register at 221118_040453

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -738,15 +738,11 @@
   "Gustav Hölscher.": "Gustav Hölscher",
   "Gutenbrunner": "Siegfried Gutenbrunner",
   "Gärtner": "Hans Gärtner",
-  "Gärtner.": "Hans Gärtner",
   "Gärtner & Wünsch.": [
     "Hans Gärtner",
     "Albert Wünsch"
   ],
-  "H.G. A.W.": [
-    "Hans Gärtner",
-    "Albert Wünsch"
-  ],
+  "Gärtner.": "Hans Gärtner",
   "Géza Alföldy.": "Géza Alföldy",
   "Göbel": "Fritz Göbel",
   "Göbel.": "Fritz Göbel",
@@ -780,6 +776,7 @@
   "H.-J. Diesner.": "Hans-Joachim Diesner",
   "H.-O. Kröner.": "Hans-Otto Kröner",
   "H.-P. Drögemüller.": "Hans-Peter Drögemüller",
+  "H.G. A.W.": "Hans Gärtner",
   "Habel": "Paul Habel",
   "Habel.": "Paul Habel",
   "Habermehl": "Helmut Habermehl",
