--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -850,6 +850,7 @@
   "Heinemann": "Isaak Heinemann",
   "Heinr. Bischoff.": "Heinrich Bischoff| (Altphilologe)",
   "Heinrich Bischoff.": "Heinrich Bischoff| (Altphilologe)",
+  "Heinr. Dörrie.": "Heinrich Dörrie",
   "Heinrich Dörrie.": "Heinrich Dörrie",
   "Heinrich Sulze.": "Heinrich Sulze",
   "Heinz B. Wiggers.": "Heinz Bernhard Wiggers",
