Updating the register at 250719_050517

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1232,6 +1232,7 @@
   "Kunst": "Karl Kunst",
   "Kurfess": "Alfons Kurfess",
   "Kurt Bardong.": "Kurt Bardong",
+  "Kurt Gschwantler.": "Kurt Gschwantler",
   "Kurt Latte.": "Kurt Latte",
   "Kurt v. Fritz.": "Kurt von Fritz",
   "Kurt von Fritz.": "Kurt von Fritz",
@@ -1748,6 +1749,7 @@
   "Rucker": "Ignaz Rucker",
   "Rud. Helm.": "Rudolf Helm",
   "Rud. Schneider.": "Rudolf Schneider",
+  "Rudolf Beutler.": "Rudolf Beutler",
   "Rudolf Hanslik.": "Rudolf Hanslik",
   "Rudolf Helm.": "Rudolf Helm",
   "Rudolf Herbst.": "Rudolf Herbst",
