Updating the register at 250802_050456

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2192,6 +2192,7 @@
   "Wilh. Becher.": "Wilhelm Becher",
   "Wilh. Enßlin.": "Wilhelm Enßlin",
   "Wilh. Kubitschek.": "Wilhelm Kubitschek",
+  "Wilh. Nestle.": "Wilhelm Nestle",
   "Wilhelm Alzinger.": "Wilhelm Alzinger",
   "Wilhelm Becher.": "Wilhelm Becher",
   "Wilhelm Enßlin.": "Wilhelm Enßlin",
