Updating the register at 250811_151527

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -634,6 +634,7 @@
   "G. Lippold.": "Georg Lippold",
   "G. Macdonald.": "George MacDonald| (Numismatiker)",
   "G. Mau.": "Georg Mau",
+  "G. Meier.": "Gerhard Meier",
   "G. Mickwitz.": "Gunnar Mickwitz",
   "G. Radke.": "Gerhard Radke",
   "G. Reincke.": "Gerhard Reincke",
@@ -941,6 +942,7 @@
   "Hitzig": "Hermann Ferdinand Hitzig",
   "Hitzig.": "Hermann Ferdinand Hitzig",
   "Hobein": "Hermann Hobein",
+  "Hobein.": "Hermann Hobein",
   "Hoefer": "Ulrich Hoefer",
   "Hoefer.": "Ulrich Hoefer",
   "Hoffmann": {
@@ -1056,6 +1058,7 @@
   "Jos. Fischer.": "Joseph Fischer| (Geograph)",
   "Josef Keil.": "Josef Keil",
   "Josef Krischan.": "Josef Krischan",
+  "Joseph Waldis.": "Joseph Waldis",
   "Josifović": "Stevan Josifović",
   "Jost Benedum.": "Jost Benedum",
   "Jotham Johnson.": "Jotham Johnson",
@@ -2111,6 +2114,7 @@
   "Wagler.": "Paul Wagler",
   "Wagner.": "Richard Wagner| (Philologe)",
   "Waldis": "Joseph Waldis",
+  "Waldis.": "Joseph Waldis",
   "Waldstein": "Wolfgang Waldstein",
   "Walser": "Gerold Walser",
   "Walter": "Otto Walter",
